--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.3.0",
     "mongoose": "^6.0.10",
     "next": "11.1.2",
+    "nextjs-cors": "^2.0.0",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
