--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.10",
     "next": "11.1.2",
     "nextjs-cors": "^2.0.0",
